# GSL-Sparse

./: CMakeLists.txt  Doxyfile.cmake  Makefile  README.md
headers/: Bayesian_LASSO.h  Bayesian_Regressor.h  CMakeLists.txt  Const_Dictionary.h  FISTA_solver.h  Kernel_estimator.h  LASSO_LARS_solver.h  Pileup_Correction.h  Poisson_Process.h  Post_Processing.h  Spectro_Signal.h  TIMIT_Signal.h
src/: CMakeLists.txt
src/debug/: basic_fista.cpp  basic_test.cpp  construct_dico.c  debug_downdate.cpp  debug_estimatesigma0.cpp  test_compute_direction.cpp  test_init_chol.cpp  test_initialize_matrices.cpp  test_new_dict.cpp  test_nhpp.cpp  test_regrouping.cpp  test_signal.cpp  test_stopping_criterion.cpp  test_updatechol.cpp
src/dictionaries/: Const_Dictionary.cpp
src/mains/: main_acqui2012_process.cpp  main_acqui2012_reg.cpp  main_acqui2012_regFISTA.cpp  main_adonis_process.cpp  main_nhpp_simulation.cpp  main_pileup_correction_adonis.cpp
src/signal/: Pileup_Correction.cpp  Post_Processing.cpp  Spectro_Signal.cpp  TIMIT_Signal.cpp
src/solvers/: Bayesian_LASSO.cpp  Bayesian_Regressor.cpp  FISTA_solver.cpp  LASSO_LARS_solver.cpp
src/stats/: Kernel_estimator.cpp  Poisson_Process.cpp
